Changes to CR_MetricShader to Add a Toggle Button to the DXCore Visualize Toolbar.

--- a/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
+++ b/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.vb" />
     <Compile Include="SourceRangeExt.vb" />
+    <Compile Include="Util.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Options1.resx">
@@ -94,6 +95,9 @@
     <EmbeddedResource Include="PlugIn1.resx">
       <DependentUpon>PlugIn1.vb</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\CR_MetricShader.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
