--- a/trunk/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
+++ b/trunk/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
@@ -72,6 +72,9 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ColorPicker.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Options1.Designer.vb">
       <DependentUpon>Options1.vb</DependentUpon>
     </Compile>
@@ -85,6 +88,7 @@
       <DependentUpon>PlugIn1.vb</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.vb" />
+    <Compile Include="Settings.vb" />
     <Compile Include="SourceRangeExt.vb" />
     <Compile Include="Util.vb" />
   </ItemGroup>
@@ -97,6 +101,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ColorPicker.resx">
+      <DependentUpon>ColorPicker.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\CR_MetricShader.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
