--- a/trunk/CR_SettingsMonitor/CR_SettingsMonitor/CR_SettingsMonitor.vbproj
+++ b/trunk/CR_SettingsMonitor/CR_SettingsMonitor/CR_SettingsMonitor.vbproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B643C6AF-CCE8-428D-955F-58EAB97459B7}</ProjectGuid>
+    <ProjectGuid>{9EE496AB-246B-4A24-9788-5DAD239E2F06}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CR_SettingMonitor</RootNamespace>
-    <AssemblyName>CR_SettingMonitor</AssemblyName>
+    <RootNamespace>CR_SettingsMonitor</RootNamespace>
+    <AssemblyName>CR_SettingsMonitor</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -24,7 +24,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>..\..\..\..\RoryData\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
-    <DocumentationFile>CR_SettingMonitor.xml</DocumentationFile>
+    <DocumentationFile>CR_SettingsMonitor.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -33,7 +33,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>..\..\..\..\RoryData\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
-    <DocumentationFile>CR_SettingMonitor.xml</DocumentationFile>
+    <DocumentationFile>CR_SettingsMonitor.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
