--- a/trunk/CR_GenerateTest/CR_GenerateTest/CR_GenerateTest.vbproj
+++ b/trunk/CR_GenerateTest/CR_GenerateTest/CR_GenerateTest.vbproj
@@ -104,15 +104,24 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DXtras.vb" />
+    <Compile Include="Common\FileOperations.vb" />
+    <Compile Include="Common\FluentDX.vb" />
+    <Compile Include="Common\ProjectOperations.vb" />
+    <Compile Include="Common\SolutionExt.vb" />
+    <Compile Include="Common\UndoUnits\AddedProjectFileUndoUnit.vb" />
+    <Compile Include="Common\UndoUnits\CreatedFileUndoUnit.vb" />
+    <Compile Include="Common\UndoUnits\DeletedFileUndoUnit.vb" />
+    <Compile Include="Common\UndoUnits\FileActivateRedoUnit.vb" />
+    <Compile Include="Common\UndoUnits\FileActivateUndoUnit.vb" />
+    <Compile Include="Common\UndoUnits\RemovedProjectFileUndoUnit.vb" />
+    <Compile Include="Common\DXtras.vb" />
     <Compile Include="Options1.Designer.vb">
       <DependentUpon>Options1.vb</DependentUpon>
     </Compile>
     <Compile Include="Options1.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ProjectExt.vb" />
-    <Compile Include="FluentDX.vb" />
+    <Compile Include="Common\ProjectExt.vb" />
     <Compile Include="PlugIn1.vb">
       <SubType>Component</SubType>
     </Compile>
