--- a/trunk/DX_CollapseFromEnd/DX_CollapseFromEnd/DX_CollapseFromEnd.vbproj
+++ b/trunk/DX_CollapseFromEnd/DX_CollapseFromEnd/DX_CollapseFromEnd.vbproj
@@ -79,6 +79,10 @@
     <Compile Include="Properties\AssemblyInfo.vb" />
     <Compile Include="SourceRangeExt.vb" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\Collapse.bmp" />
+    <Content Include="Images\Minus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
