--- a/trunk/RedGreen/RedGreen/RedGreen.csproj
+++ b/trunk/RedGreen/RedGreen/RedGreen.csproj
@@ -42,7 +42,9 @@
     <Reference Include="DevExpress.CodeRush.Interop, Version=3.0.8.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.CodeRush.UserControls, Version=9.2.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.UserControls, Version=9.2.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="DevExpress.DXCore.Controls.XtraBars.v6.3, Version=3.0.8.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -79,6 +81,14 @@
     <Reference Include="DevExpress.CodeRush.StructuralParser" />
     <Reference Include="DevExpress.CodeRush.VSCore" />
     <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="xunit, Version=1.4.9.1465, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\3rdParty\xUnit\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.runner.utility, Version=1.4.9.1465, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\3rdParty\xUnit\xunit.runner.utility.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdHocDetail.cs" />
@@ -94,6 +104,8 @@
     <Compile Include="MbUnitGallioParser.cs" />
     <Compile Include="NullGallioParser.cs" />
     <Compile Include="NUnitGallioParser.cs" />
+    <Compile Include="NUnitParser.cs" />
+    <Compile Include="NUnitRunner.cs" />
     <Compile Include="OptRedGreenPlugIn.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -109,6 +121,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultParser.cs" />
     <Compile Include="ResultParserFactory.cs" />
+    <Compile Include="RunnerFactory.cs" />
     <Compile Include="SummaryResult.cs" />
     <Compile Include="TestCompleteEventArgs.cs" />
     <Compile Include="UnitTestDetail.cs" />
@@ -117,6 +130,8 @@
     <Compile Include="TestsStartingEventArgs.cs" />
     <Compile Include="TestStatus.cs" />
     <Compile Include="XunitGallioParser.cs" />
+    <Compile Include="XunitResultXmlUtility.cs" />
+    <Compile Include="XunitRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PlugIn1.resx">
