--- a/DX_CollapseFromEnd/DX_CollapseFromEnd/DX_CollapseFromEnd.vbproj
+++ b/DX_CollapseFromEnd/DX_CollapseFromEnd/DX_CollapseFromEnd.vbproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\Collapse.bmp" />
+    <EmbeddedResource Include="Images\Expand.bmp" />
     <Content Include="Images\Minus.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
