--- a/trunk/CR_CreateTestMethod/CR_CreateTestMethod/CR_CreateTestMethod.csproj
+++ b/trunk/CR_CreateTestMethod/CR_CreateTestMethod/CR_CreateTestMethod.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\DOCUME~1\Casey\My Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
+    <OutputPath>C:\Users\Casey\Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
