--- a/CR_GenerateTest/CR_GenerateTest/CR_GenerateTest.vbproj
+++ b/CR_GenerateTest/CR_GenerateTest/CR_GenerateTest.vbproj
@@ -132,6 +132,7 @@
     <Compile Include="PlugIn1.Designer.vb">
       <DependentUpon>PlugIn1.vb</DependentUpon>
     </Compile>
+    <Compile Include="PluginSettings.vb" />
     <Compile Include="Properties\AssemblyInfo.vb" />
   </ItemGroup>
   <ItemGroup>
