--- a/Refactor_CreateStubForHandler/Refactor_CreateStubForHandler/Refactor_CreateStubForHandler.vbproj
+++ b/Refactor_CreateStubForHandler/Refactor_CreateStubForHandler/Refactor_CreateStubForHandler.vbproj
@@ -47,7 +47,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\Plugins\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>Refactor_CreateStubForHandler.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
@@ -68,7 +68,7 @@
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\PlugIns\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DocumentationFile>Refactor_CreateStubForHandler.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
