Added all the MsTestRunner code, but it is commented out in the factory, so it won't be used.

--- a/RedGreen/RedGreen/RedGreen.csproj
+++ b/RedGreen/RedGreen/RedGreen.csproj
@@ -102,6 +102,7 @@
     <Compile Include="IGallioResultParser.cs" />
     <Compile Include="ITestDetail.cs" />
     <Compile Include="MbUnitGallioParser.cs" />
+    <Compile Include="MsTestRunner.cs" />
     <Compile Include="NullGallioParser.cs" />
     <Compile Include="NUnitGallioParser.cs" />
     <Compile Include="NUnitParser.cs" />
