Added an options page. Added the ability to paint the test attribute with the color of the test status. No option yet to change colors. Maybe later.

--- a/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
+++ b/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
@@ -61,10 +61,19 @@
       <DependentUpon>PlugIn1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="OptUnitTestVisualizer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptUnitTestVisualizer.Designer.cs">
+      <DependentUpon>OptUnitTestVisualizer.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PlugIn1.resx">
       <DependentUpon>PlugIn1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptUnitTestVisualizer.resx">
+      <DependentUpon>OptUnitTestVisualizer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
