--- a/UnitTestErrorVisualizer/UnitTestVisualizer.Tests/UnitTestVisualizer.Tests.csproj
+++ b/UnitTestErrorVisualizer/UnitTestVisualizer.Tests/UnitTestVisualizer.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DifferAtParser.cs" />
     <Compile Include="ExpectedValueParser.cs" />
     <Compile Include="LineNumberParserTests.cs" />
+    <Compile Include="MessageLimiterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
