CR_NavigationContrib: Added explicit allocation of aprovider name.... Not sure how this ever worked without it.

--- a/CR_NavigationContrib/CR_NavigationContrib/CR_NavigationContrib.csproj
+++ b/CR_NavigationContrib/CR_NavigationContrib/CR_NavigationContrib.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\PlugIns</OutputPath>
+    <OutputPath>..\..\..\..\..\RoryData\Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
