Updated a reference on CR_NavigateToDefinition.csproj

--- a/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
+++ b/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
@@ -31,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.CodeRush.Library, Version=9.3.3.0, Culture=neutral, PublicKeyToken=e1a72e979dafdca7" />
+    <Reference Include="DevExpress.CodeRush.Library, Version=9.3.3.0, Culture=neutral, PublicKeyToken=e1a72e979dafdca7">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
