CR_StyleNinja: Major Refactoring.. Fixes added to supported Issues.

--- a/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
+++ b/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
@@ -23,7 +23,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>D:\RoryData\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
+    <OutputPath>..\..\..\..\RoryData\Documents\DevExpress\IDE Tools\Community\Plugins\</OutputPath>
     <DocumentationFile>CR_StyleNinja.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -75,6 +75,8 @@
     <Compile Include="Enumerators.vb" />
     <Compile Include="LanguageElementExt.vb" />
     <Compile Include="Naming.vb" />
+    <Compile Include="NamingDetection.vb" />
+    <Compile Include="NamingFixes.vb" />
     <Compile Include="PlugIn1.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -82,6 +84,7 @@
       <DependentUpon>PlugIn1.vb</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.vb" />
+    <Compile Include="Renaming.vb" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
